# agentwatch

./: .gitignore  README.md  demo.py  pyproject.toml
agentwatch/: __init__.py  cli.py  db.py  models.py  sdk.py  server.py
agentwatch/static/: index.html
docs/plans/: 2026-02-09-agentwatch-design.md
