[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch"
version = "0.1.0"
description = "Lightweight AI agent observability platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agentwatch = "agentwatch.cli:main"
